# FexBots

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/service/: query.rs
api/templates/: index.html.tera
db/: Cargo.toml
db/src/: mutation.rs  query.rs
entity/: Cargo.toml
entity/src/: chatter.rs  chatter_command.rs  command.rs  lib.rs  post.rs  prelude.rs  streamer.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220120_000002_seed_posts.rs  m20260315_051110_create_streamer.rs  m20260315_051846_seed_streamer.rs  m20260318_041233_create_chatter.rs  m20260318_051448_create_command.rs  m20260318_051631_seed_command.rs  m20260319_023840_create_chatter_command.rs  m20260329_224109_seed_metronome_command.rs
src/: main.rs
twitch/: Cargo.toml
twitch/src/: commands.rs  fexbot.rs  lib.rs  websocket.rs
