[package]
authors      = ["Fex Collects <fex@fexcollects.com>"]
edition      = "2024"
name         = "fex-bots"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]
members = [".", "api", "entity", "migration", "twitch"]

[dependencies]
api = { path = "api" }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.31"
migration = { path = "./migration" }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twitch = { path = "twitch" }

# sea-orm-cli generate entity --output-dir entity/src --with-serde both --lib --serde-skip-deserializing-primary-key --entity-format dense
