[package]
authors      = ["Fex Collects <fex@fexcollects.com>"]
edition      = "2024"
name         = "api"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[dependencies]
axum               = "0.8"
entity             = { path = "../entity" }
eyre               = "0.6.12"
migration          = { path = "../migration" }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
serde              = "1.0.193"
serde_json         = "1.0.108"
tera               = "1.19.1"
tokio              = { version = "1.34.0", features = ["full"] }
tower-cookies      = "0.11"
tower-http         = { version = "0.6", features = ["fs"] }
