[package]
edition      = "2024"
name         = "entity"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
serde = { version = "1", features = ["derive"] }
