[package]
edition      = "2024"
name         = "twitch"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "twitch"
path = "src/lib.rs"

[dependencies]
twitch_api = { version = "0.7.2", features = ["eventsub", "helix", "reqwest"] }
twitch_oauth2 = { version = "=0.15.2", features = ["client"] }
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
reqwest = "=0.12.28"
eyre = "0.6.12"
futures = "0.3.31"
