[package]
edition      = "2024"
name         = "twitch"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "twitch"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.41"
db                 = { path = "../db" }
eyre = "0.6.12"
futures = "0.3.31"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
twitch_api = { version = "0.7.2", features = ["eventsub", "helix", "reqwest"] }
twitch_oauth2 = { version = "=0.15.2", features = ["client"] }
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = "=0.12.28"
